Fixed an overflow issue.

--- a/css/children.css
+++ b/css/children.css
@@ -1,18 +1,18 @@
 .wholePage{
 	background: rgb(38,163,255); /* Old browsers */
 	/* IE9 SVG, needs conditional override of 'filter' to 'none' */
-	background: -moz-radial-gradient(88% 11%, circle cover,  rgb(255,255,255) 10%, rgb(38,163,255) 100%); /* FF3.6+ */
-	background: -webkit-gradient(radial, 88% 11% center, 0px, center center, 100%, color-stop(10%,rgb(255,255,255)), color-stop(100%,rgb(38,163,255))); /* Chrome,Safari4+ */
-	background: -webkit-radial-gradient(88% 11%, circle cover,  rgb(255,255,255) 10%,rgb(38,163,255) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-radial-gradient(88% 11%, circle cover,  rgb(255,255,255) 10%,rgb(38,163,255) 100%); /* Opera 12+ */
-	background: -ms-radial-gradient(88% 11%, circle cover,  rgb(255,255,255) 10%,rgb(38,163,255) 100%); /* IE10+ */
-	background: radial-gradient(88% 11%, circle cover,  rgb(255,255,255) 10%,rgb(38,163,255) 100%); /* W3C */
+	background: -moz-radial-gradient(80% 11%, circle cover,  rgb(255,255,255) 10%, rgb(38,163,255) 100%); /* FF3.6+ */
+	background: -webkit-gradient(radial, 80% 11% center, 0px, center center, 100%, color-stop(10%,rgb(255,255,255)), color-stop(100%,rgb(38,163,255))); /* Chrome,Safari4+ */
+	background: -webkit-radial-gradient(80% 11%, circle cover,  rgb(255,255,255) 10%,rgb(38,163,255) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-radial-gradient(80% 11%, circle cover,  rgb(255,255,255) 10%,rgb(38,163,255) 100%); /* Opera 12+ */
+	background: -ms-radial-gradient(80% 11%, circle cover,  rgb(255,255,255) 10%,rgb(38,163,255) 100%); /* IE10+ */
+	background: radial-gradient(80% 11%, circle cover,  rgb(255,255,255) 10%,rgb(38,163,255) 100%); /* W3C */
 }
 
 .childrenSun{
 	position:absolute;
 	background: url('/images/img.png') no-repeat -63px -4px;
-	left:75%;
+	left:70%;
 	top:36px;
 	width: 470px;
 	height: 415px;
